Escrevendo README.md

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<li><a style="color: #EB2D2D;" href="index.html">Home</a></li>
 					<li><a href="venda.html">Venda</a></li>
 					<li><a href="sobre.html">Sobre</a></li>
-					<li><a goto="contato" href="">Contato</a></li>
+					<li><a href="#contato">Contato</a></li>
 				</ul>
 			</nav><!--desktop-->
 
@@ -36,7 +36,7 @@
 					<li><a style="color: #EB2D2D;" href="index.html">Home</a></li>
 					<li><a href="venda.html">Venda</a></li>
 					<li><a href="sobre.html">Sobre</a></li>
-					<li><a goto="contato" href="">Contato</a></li>
+					<li><a href="#contato">Contato</a></li>
 				</ul>
 			</nav><!--mobile-->
 
